--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <a href="#">Return home</a>
         </div>
         <img src="#" alt="crashed car image">
+        <div>Extra change</div>
     </main>
 </body>
 </html>
