--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </div>
         <img src="#" alt="crashed car image">
         <div>Extra change</div>
+        <div>Extra extra</div>
     </main>
 </body>
 </html>
