--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <img src="#" alt="crashed car image">
         <div>Extra change</div>
         <div>Extra extra</div>
+        <div>dar extra</div>
     </main>
 </body>
 </html>
