--- a/index.html
+++ b/index.html
@@ -7,25 +7,30 @@
     <title>Test 3 car</title>
 </head>
 <body>
-    <header>
-        <a href="#"><img src="#" alt="logo"></a>
-        <div>
-            <button><img src="#" alt="dropdown"></button>
+    <header style="display: inline-block; background-color: aqua; width: 100%;">
+        <a href="#" style="float: left; width: 25%; background-color: blanchedalmond;">
+            <img src="./logo.jpg" alt="logo" style="float:left; margin-left: 5%;">
+        </a>
+        <div style="width: 10%; margin-left: 60%; background-color: blue;  float: left; text-align: right;">
+            <button type="button" onclick="alert('Not sure yet, not implemented...')" style="background-color: white;">
+                <img src="./burger.jpg" alt="dropdown">
+            </button>
         </div>
     </header>
-    <main>
-        <div>
-            <div>
+    <main style="display: inline-block; background-color: burlywood; width: 100%;">
+        <div style="display: block; background-color: lightgreen;">
+            <div style="float: left; background-color: lightpink; width: 65%; margin-left: 5%;">
                 <h2>Accidents happen.</h2>
                 <p>Just like this page</p>
             </div>
-            <a href="#">Return home</a>
+            <a href="#" style="float: left; margin-top: 4.5%; background-color: lightcyan; width: 20%; margin-left:5%;">Return home ></a>
         </div>
-        <img src="#" alt="crashed car image">
-        <div>Extra change</div>
-        <div>Extra extra</div>
-        <div>dar extra</div>
-        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+        <div style="display: inline-block; width:100%; background-color: aqua;">
+            <img src="./crashed-car.png" alt="crashed car image" style=" float: right; background-color: antiquewhite; margin: 0;">
+        </div>
+        <div>Some extra text for testing this</div>
+      
     </main>
+
 </body>
 </html>
