--- a/index.html
+++ b/index.html
@@ -7,26 +7,24 @@
     <title>Test 3 car</title>
 </head>
 <body>
-    <header style="display: inline-block; background-color: aqua; width: 100%;">
-        <a href="#" style="float: left; width: 25%; background-color: blanchedalmond;">
-            <img src="./logo.jpg" alt="logo" style="float:left; margin-left: 5%;">
-        </a>
-        <div style="width: 10%; margin-left: 60%; background-color: blue;  float: left; text-align: right;">
-            <button type="button" onclick="alert('Not sure yet, not implemented...')" style="background-color: white;">
-                <img src="./burger.jpg" alt="dropdown">
-            </button>
+    <header style="display: inline-block; width: 100%;">
+        <a href="#" style="float: left;  margin-left: 5%; background-color: blanchedalmond;">
+            <img src="./logo.jpg" alt="logo" style="float:left;">
+            </a>
+        <div style=" margin-right: 5%; margin-top: 10px; background-color: blue;  float: right; text-align: right;">
+            <button type="button" onclick="alert('Not sure yet, not implemented...')" style="background-color: white; border-style: none; float: left; font-size: 20px;">≡</button>
         </div>
     </header>
-    <main style="display: inline-block; background-color: burlywood; width: 100%;">
-        <div style="display: block; background-color: lightgreen;">
-            <div style="float: left; background-color: lightpink; width: 65%; margin-left: 5%;">
-                <h2>Accidents happen.</h2>
-                <p>Just like this page</p>
+    <main style="display: inline-block; width: 100%; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
+        <div>
+            <div style="float: left; width: 40%; margin-left: 15%; margin-top: 50px;">
+                <h1 style="margin: 0; font-size: 40px; line-height: 1em;">Accidents happen.</h2>
+                <p style="margin: 0; color: gray; font-size: 20px;">Just like this page</p>
             </div>
-            <a href="#" style="float: left; margin-top: 4.5%; background-color: lightcyan; width: 20%; margin-left:5%;">Return home ></a>
+            <a href="#" style="float: left; margin-top: 55px; margin-left:5%;padding: 10px; border-color: gray; border-style: solid; border-width: 2px; color: gray; text-decoration: none;">Return home <div style="display:inline; text-align: right; margin-left: 50px;">></div></a>
         </div>
-        <div style="display: inline-block; width:100%; background-color: aqua;">
-            <img src="./crashed-car.png" alt="crashed car image" style=" float: right; background-color: antiquewhite; margin: 0;">
+        <div style="display: inline-block; width:100%; margin-top: 100px;">
+            <img src="./crashed-car.png" alt="crashed car image" style=" float: right; margin: 0; width: 55%;">
         </div>
         <div>Some extra text for testing this</div>
       
