--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test 3 car</title>
+<link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    <header style="display: inline-block; width: 100%;">
+    <header>
         <a href="#" style="float: left;  margin-left: 5%; background-color: blanchedalmond;">
             <img src="./logo.jpg" alt="logo" style="float:left;">
             </a>
@@ -15,16 +16,16 @@
             <button type="button" onclick="alert('Not sure yet, not implemented...')" style="background-color: white; border-style: none; float: left; font-size: 20px;">≡</button>
         </div>
     </header>
-    <main style="display: inline-block; width: 100%; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
+    <main>
         <div>
             <div style="float: left; width: 40%; margin-left: 15%; margin-top: 50px;">
-                <h1 style="margin: 0; font-size: 40px; line-height: 1em;">Accidents happen.</h2>
-                <p style="margin: 0; color: gray; font-size: 20px;">Just like this page</p>
+                <h1>Accidents happen.</h2>
+                <p>Just like this page</p>
             </div>
             <a href="#" style="float: left; margin-top: 55px; margin-left:5%;padding: 10px; border-color: gray; border-style: solid; border-width: 2px; color: gray; text-decoration: none;">Return home <div style="display:inline; text-align: right; margin-left: 50px;">></div></a>
         </div>
         <div style="display: inline-block; width:100%; margin-top: 100px;">
-            <img src="./crashed-car.png" alt="crashed car image" style=" float: right; margin: 0; width: 55%;">
+            <img src="./crashed-car.png" alt="crashed car image" style="float: right; margin: 0; width: 55%;">
         </div>
         <div>Some extra text for testing this</div>
       
