--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <header>
         <a href="#" style="float: left;  margin-left: 5%; background-color: blanchedalmond;">
-            <img src="./logo.jpg" alt="logo" style="float:left;">
+            <img src="./logo.jpg" alt="logo" style="float:left; height: 50px;">
             </a>
-        <div style=" margin-right: 5%; margin-top: 10px; background-color: blue;  float: right; text-align: right;">
-            <button type="button" onclick="alert('Not sure yet, not implemented...')" style="background-color: white; border-style: none; float: left; font-size: 20px;">≡</button>
-        </div>
+        <nav>
+            <button type="button" onclick="alert('Not sure yet, not implemented...')">≡</button>
+        </nav>
     </header>
     <main>
         <div>
