Link arrow to span

--- a/index.html
+++ b/index.html
@@ -22,14 +22,12 @@
                 <h1>Accidents happen.</h2>
                 <p>Just like this page</p>
             </div>
-            <a href="#" style="float: left; margin-top: 55px; margin-left:5%;padding: 10px; border-color: gray; border-style: solid; border-width: 2px; color: gray; text-decoration: none;">Return home <div style="display:inline; text-align: right; margin-left: 50px;">></div></a>
+            <a href="#" style="float: left; margin-top: 55px; margin-left:5%;padding: 10px; border-color: gray; border-style: solid; border-width: 2px; color: gray; text-decoration: none;">Return home <span>></span></a>
         </div>
         <div style="display: inline-block; width:100%; margin-top: 100px;">
             <img src="./crashed-car.png" alt="crashed car image" style="float: right; margin: 0; width: 55%;">
         </div>
         <div>Some extra text for testing this</div>
-      
     </main>
-
 </body>
 </html>
