Header, pictures, fontawesone relative path

--- a/index.html
+++ b/index.html
@@ -17,15 +17,13 @@
     <link rel="shortcut icon" href="./Favicon/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <header>
-        <a href="#" style="float: left;  margin-left: 5%; background-color: blanchedalmond;">
-            <img src="./logo.jpg" alt="logo" style="float:left; height: 50px;">
-            </a>
-        <nav>
-            <button type="button" onclick="alert('Not sure yet, not implemented...')">≡</button>
-        </nav>
+    <header class="container">
+        <a class="logo" href="#">
+            <img src="./img/logo.png" alt="logo">
+        </a>
+        <button class="drop-down fa fa-bars" type="button" onclick="alert('Not sure yet, not implemented...')"></button>
     </header>
-    <main>
+    <main class="container">
         <div>
             <div style="float: left; width: 40%; margin-left: 15%; margin-top: 50px;">
                 <h1>Accidents happen.</h2>
@@ -34,7 +32,7 @@
             <a href="#" style="float: left; margin-top: 55px; margin-left:5%;padding: 10px; border-color: gray; border-style: solid; border-width: 2px; color: gray; text-decoration: none;">Return home <span>></span></a>
         </div>
         <div style="display: inline-block; width:100%; margin-top: 100px;">
-            <img src="./crashed-car.png" alt="crashed car image" style="float: right; margin: 0; width: 55%;">
+            <img src="./img/crashed-car.png" alt="crashed car image" style="float: right; margin: 0; width: 55%;">
         </div>
         <div>Some extra text for testing this</div>
     </main>
