--- a/index.html
+++ b/index.html
@@ -24,17 +24,11 @@
         <button class="drop-down fa fa-bars" type="button" onclick="alert('Not sure yet, not implemented...')"></button>
     </header>
     <main class="container">
-        <div>
-            <div style="float: left; width: 40%; margin-left: 15%; margin-top: 50px;">
-                <h1>Accidents happen.</h2>
-                <p>Just like this page</p>
-            </div>
-            <a href="#" style="float: left; margin-top: 55px; margin-left:5%;padding: 10px; border-color: gray; border-style: solid; border-width: 2px; color: gray; text-decoration: none;">Return home <span>></span></a>
+        <div class="first-line">
+            <h1 class="title">Accidents happen. <span>Just like this page.</span></h1>
+            <a class="button" href="#">Return home<i class="fa fa-angle-right"></i></a>
         </div>
-        <div style="display: inline-block; width:100%; margin-top: 100px;">
-            <img src="./img/crashed-car.png" alt="crashed car image" style="float: right; margin: 0; width: 55%;">
-        </div>
-        <div>Some extra text for testing this</div>
+        <img class="second-line" src="./img/crashed-car.png" alt="crashed car image">
     </main>
 </body>
 </html>
